--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,22 @@
 
+body{
+
+    background-color: #E98686;
+}
+
+#maintext{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position: fixed;
+    left: 30vh;
+    top: 30vh;
+    font-size: 10vh;
+    z-index: 1;
+    color: white;
+
+}
+
 .container{
-    width: 100vh;
+    width: 100%;
     height: 100vh;
     text-align: center;
     display: flex;
@@ -8,14 +24,23 @@
     align-items: center;
 }
 
-.leftslide{
+#leftslide{
     position: fixed;
     left: 10%;
     top:50%;
 }
 
-.rightslide{
+#rightslide{
     position: fixed;
     right: 10%;
     top:50%;
 }
+#nipplelist {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    height: 55vw;
+}
+
